# drunkdeer-auto-profile-changer

./: .prettierrc  README.md  bun.lockb  package.json  tsconfig.json
src/: App.tsx  RouterInner.tsx  auto_launch.js  sample-profiles.json
src-tauri/: Cargo.toml  profiles.json  tauri.conf.json
src-tauri/src/: main.rs
src/api/: hid.ts  profile.ts
src/components/: SettingItem.tsx
src/components/Navbar/: index.tsx
src/pages/Performance/: KeyMapings.ts  Keybord.tsx  index.tsx
src/pages/Performance/KeySettings/: index.tsx
src/pages/Performance/ProfileSetting/: CreateProfile.tsx  ExeList.tsx  ProfileSelector.tsx  index.tsx
src/pages/Top/: index.tsx
src/store/hid/: index.tsx
src/store/message/: message.ts
src/store/profile/: defaultKeySettings.tsx  index.tsx
src/store/window/: index.tsx
