[package]
name = "drunkdeer-client-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-hide", "window-show", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-minimize", "window-maximize", "system-tray", "fs-read-file", "dialog-open", "fs-exists", "path-all", "fs-write-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-js-set-interval = "1.3.0"
hidapi-rusb = "1.3.3"
window-shadows = "0.2.2"


[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"
]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
